src/main/java/com/example/DiplomaSite/error/ReviewDeletionException.java
package com.example.DiplomaSite.error;

public class ReviewDeletionException extends RuntimeException{
    public ReviewDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
